--- a/src/main/resources/templates/admin/Article/articleList.html
+++ b/src/main/resources/templates/admin/Article/articleList.html
@@ -22,6 +22,14 @@
   <script src="https://cdn.ckeditor.com/ckeditor5/34.1.0/classic/ckeditor.js"></script>
   <script src="https://cdn.ckeditor.com/ckeditor5/34.1.0/classic/translations/vi.js"></script>
   <script src="https://cdn.ckeditor.com/ckfinder/3.5.0/ckfinder.js"></script>
+  <style>
+    .ck-editor__editable_inline {
+      color: #000 !important; /* chữ đen */
+      background-color: #fff; /* nền trắng */
+      min-height: 300px !important;
+    }
+  </style>
+
 </head>
 <body>
 <div class="container-scroller">
@@ -139,7 +147,6 @@
       </div>
     </div>
   </div>
-
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
