--- a/src/main/resources/templates/admin/Contact/contactList.html
+++ b/src/main/resources/templates/admin/Contact/contactList.html
@@ -40,17 +40,19 @@
                 <tr>
                     <th>#</th>
                     <th>Name</th>
-                    <th>Image</th>
-                    <th>Price</th>
-                    <th>Actions</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                    <th>Message</th>
                 </tr>
                 </thead>
-                <tbody id="medicineTable"></tbody>
+                <tbody id="contactTable"></tbody>
             </table>
         </div>
         <!-- main-panel ends -->
     </div>
     <!-- page-body-wrapper ends -->
 </div>
+<script type="text/javascript" src="/js/contact.js"></script>
+
 </body>
 </html>
