--- a/src/main/resources/templates/admin/Order/orderList.html
+++ b/src/main/resources/templates/admin/Order/orderList.html
@@ -40,7 +40,7 @@
                 <tr>
                     <th>#</th>
                     <th>Order No</th>
-                    <th>Client Name</th>
+                    <th>Name</th>
                     <th>PayMent</th>
                     <th>Start Date</th>
                     <th>Payment Status</th>
