--- a/src/main/resources/templates/admin/User/userList.html
+++ b/src/main/resources/templates/admin/User/userList.html
@@ -40,17 +40,18 @@
                 <tr>
                     <th>#</th>
                     <th>Name</th>
-                    <th>Image</th>
-                    <th>Price</th>
+                    <th>Email</th>
+                    <th>Address</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
-                <tbody id="medicineTable"></tbody>
+                <tbody id="userTableBody"></tbody>
             </table>
         </div>
         <!-- main-panel ends -->
     </div>
     <!-- page-body-wrapper ends -->
 </div>
+<script src="/js/user.js"></script>
 </body>
 </html>
