--- a/src/main/resources/templates/views/article.html
+++ b/src/main/resources/templates/views/article.html
@@ -12,7 +12,6 @@
     <meta name="author" content="" />
 
     <title>Bài viết</title>
-
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
@@ -25,8 +24,10 @@
     <link href="/css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="/css/responsive.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
-    <style>
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+            rel="stylesheet"
+    /><style>
         .brand_box {
             position: absolute!important;
             padding:  0!important;
