--- a/src/main/resources/templates/views/articleDetail.html
+++ b/src/main/resources/templates/views/articleDetail.html
@@ -15,19 +15,21 @@
   <title>Bài viết</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap"
-        rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="/css/style.css" rel="stylesheet"/>
+  <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="/css/responsive.css" rel="stylesheet"/>
+  <link href="/css/responsive.css" rel="stylesheet" />
+  <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+          rel="stylesheet"
+  />
   <style>
     .brand_box {
       position: absolute!important;
