--- a/src/main/resources/templates/views/detailMedicine.html
+++ b/src/main/resources/templates/views/detailMedicine.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>EcoPharm</title>
+    <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
     <!-- bootstrap core css -->
@@ -14,6 +15,10 @@
     <link href="/css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="/css/responsive.css" rel="stylesheet" />
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+            rel="stylesheet"
+    />
 </head>
 <body>
 <div class="main_body_content">
